[package]
name = "telegram-chat-dialog"
version = "0.1.0"
authors = ["Serhii Pylypchuk <sergiydjan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "*", features = ["derive"] }
serde_json = "1.0"
sublime_fuzzy = { version = "*" }
rand = "0.8.0"